2011-01-04  Diego Novillo  <dnovillo@google.com>

	* lang-specs.h: Make .gimple files use the @gimple spec.
	* parser.h: Include stdio.h.
	(struct gimple_token): New.
	* gimple-lang.c	(handle_leaf_attribute): Tidy.
	* parser.c (gl_eof_token): New.
	(gl_token_as_text): New.
	(gl_at_eof): New.
	(gl_consume_token): New.
	Replace calls to cpp_get_token with this everywhere.
	Re-arrange calls to cpp_peek_token to call this and avoid
	having to peek and consume separately.
	(gl_tree_code_for_token): New.
	(gl_gimple_code_for_token): New.
	(gl_token_starts_type): New.
	(gl_dump_token): New.
	(gl_dump): New.
	(gp_dump): New.
	(gl_consume_expected_token): New.
	(gp_parse_expect_subcode): Rename from gimple_parse_expect_subcode.
	Call error_at instead of error.
	(gp_parse_expect_lhs): Rename from gimple_parse_expect_lhs.
	(gp_parse_expect_rhs1): Rename from gimple_parse_expect_rhs1.
	(gp_parse_expect_rhs2): Rename from gimple_parse_expect_rhs2.
	(gp_parse_assign_stmt): Rename from gimple_parse_assign_stmt.
	(gp_parse_expect_op1): Rename from gimple_parse_expect_op1.
	(gp_parse_expect_op2): Rename from gimple_parse_expect_op2.
	(gp_parse_expect_true_label): Rename from
	gimple_parse_expect_true_label.
	(gp_parse_expect_false_label): Rename from
	gimple_parse_expect_false_label.
	(gp_parse_cond_stmt): Rename from gimple_parse_cond_stmt.
	(gp_parse_goto_stmt): Rename from gimple_parse_goto_stmt.
	(gp_parse_label_stmt): Rename from gimple_parse_label_stmt.
	(gp_parse_switch_stmt): Rename from gimple_parse_switch_stmt.
	(gp_parse_expect_function_name): Rename from
	gimple_parse_expect_function_name.
	(gp_parse_expect_return_var): Rename from
	gimple_parse_expect_return_var.
	(gp_parse_expect_argument): Rename from gimple_parse_expect_argument.
	(gp_parse_call_stmt): Rename from gimple_parse_call_stmt.
	(gp_parse_return_stmt): Rename from gimple_parse_return_stmt.
	(gp_parse_stmt): Rename from gimple_parse_stmt.
	(gp_parse_expect_field_decl): Rename from